@@ -1,6 +1,6 @@
 # =============================================================================
 # 
-# @(#) $RCSfile: Makefile.am,v $ $Name:  $($Revision: 0.9.2.19 $) $Date: 2006/09/25 03:54:21 $
+# @(#) $RCSfile: Makefile.am,v $ $Name:  $($Revision: 0.9.2.20 $) $Date: 2006/09/25 04:01:52 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -45,11 +45,14 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2006/09/25 03:54:21 $ by $Author: brian $
+# Last Modified $Date: 2006/09/25 04:01:52 $ by $Author: brian $
 #
 # -----------------------------------------------------------------------------
 #
 # $Log: Makefile.am,v $
+# Revision 0.9.2.20  2006/09/25 04:01:52  brian
+# - added missing manpage
+#
 # Revision 0.9.2.19  2006/09/25 03:54:21  brian
 # - get rid of conflicting pages with strsock
 #
@@ -137,84 +140,86 @@ xnet_hidden_symbols = \
 	man3/_t_errno.3 \
 	man3/_t_errstr.3 \
 	man3/__xnet_t_accept.3 \
+	man3/__xnet_t_accept_r.3 \
 	man3/__xnet_t_addleaf.3 \
+	man3/__xnet_t_addleaf_r.3 \
 	man3/__xnet_t_alloc.3 \
+	man3/__xnet_t_alloc_r.3 \
 	man3/__xnet_t_bind.3 \
+	man3/__xnet_t_bind_r.3 \
 	man3/__xnet_t_close.3 \
+	man3/__xnet_t_close_r.3 \
 	man3/__xnet_t_connect.3 \
+	man3/__xnet_t_connect_r.3 \
 	man3/__xnet_t_errno.3 \
 	man3/__xnet_t_error.3 \
+	man3/__xnet_t_error_r.3 \
 	man3/__xnet_t_free.3 \
 	man3/__xnet_t_getinfo.3 \
+	man3/__xnet_t_getinfo_r.3 \
 	man3/__xnet_t_getprotaddr.3 \
+	man3/__xnet_t_getprotaddr_r.3 \
 	man3/__xnet_t_getstate.3 \
+	man3/__xnet_t_getstate_r.3 \
 	man3/__xnet_t_listen.3 \
+	man3/__xnet_t_listen_r.3 \
 	man3/__xnet_t_look.3 \
+	man3/__xnet_t_look_r.3 \
 	man3/__xnet_t_open.3 \
+	man3/__xnet_t_open_r.3 \
 	man3/__xnet_t_optmgmt.3 \
+	man3/__xnet_t_optmgmt_r.3 \
+	man3/__xnet_t_peek.3 \
 	man3/__xnet_t_rcv.3 \
 	man3/__xnet_t_rcvconnect.3 \
+	man3/__xnet_t_rcvconnect_r.3 \
 	man3/__xnet_t_rcvdis.3 \
+	man3/__xnet_t_rcvdis_r.3 \
 	man3/__xnet_t_rcvleafchange.3 \
-	man3/__xnet_t_rcvrel.3 \
-	man3/__xnet_t_rcvrel_r.3 \
-	man3/__xnet_t_rcvreldata.3 \
+	man3/__xnet_t_rcvleafchange_r.3 \
 	man3/__xnet_t_rcvopt.3 \
+	man3/__xnet_t_rcvopt_r.3 \
+	man3/__xnet_t_rcv_r.3 \
+	man3/__xnet_t_rcvrel.3 \
+	man3/__xnet_t_rcvreldata.3 \
+	man3/__xnet_t_rcvreldata_r.3 \
+	man3/__xnet_t_rcvrel_r.3 \
 	man3/__xnet_t_rcvudata.3 \
+	man3/__xnet_t_rcvudata_r.3 \
 	man3/__xnet_t_rcvuderr.3 \
+	man3/__xnet_t_rcvuderr_r.3 \
 	man3/__xnet_t_rcvv.3 \
+	man3/__xnet_t_rcvvopt.3 \
+	man3/__xnet_t_rcvvopt_r.3 \
+	man3/__xnet_t_rcvv_r.3 \
 	man3/__xnet_t_rcvvudata.3 \
+	man3/__xnet_t_rcvvudata_r.3 \
 	man3/__xnet_t_removeleaf.3 \
+	man3/__xnet_t_removeleaf_r.3 \
 	man3/__xnet_t_snd.3 \
 	man3/__xnet_t_snddis.3 \
+	man3/__xnet_t_snddis_r.3 \
 	man3/__xnet_t_sndopt.3 \
+	man3/__xnet_t_sndopt_r.3 \
+	man3/__xnet_t_snd_r.3 \
 	man3/__xnet_t_sndrel.3 \
 	man3/__xnet_t_sndreldata.3 \
+	man3/__xnet_t_sndreldata_r.3 \
+	man3/__xnet_t_sndrel_r.3 \
 	man3/__xnet_t_sndudata.3 \
+	man3/__xnet_t_sndudata_r.3 \
 	man3/__xnet_t_sndv.3 \
 	man3/__xnet_t_sndvopt.3 \
+	man3/__xnet_t_sndvopt_r.3 \
+	man3/__xnet_t_sndv_r.3 \
 	man3/__xnet_t_sndvudata.3 \
+	man3/__xnet_t_sndvudata_r.3 \
 	man3/__xnet_t_strerror.3 \
 	man3/__xnet_t_sync.3 \
+	man3/__xnet_t_sync_r.3 \
 	man3/__xnet_t_sysconf.3 \
 	man3/__xnet_t_unbind.3 \
-	man3/__xnet_t_accept_r.3 \
-	man3/__xnet_t_addleaf_r.3 \
-	man3/__xnet_t_alloc_r.3 \
-	man3/__xnet_t_bind_r.3 \
-	man3/__xnet_t_close_r.3 \
-	man3/__xnet_t_connect_r.3 \
-	man3/__xnet_t_error_r.3 \
-	man3/__xnet_t_getinfo_r.3 \
-	man3/__xnet_t_getprotaddr_r.3 \
-	man3/__xnet_t_getstate_r.3 \
-	man3/__xnet_t_listen_r.3 \
-	man3/__xnet_t_look_r.3 \
-	man3/__xnet_t_open_r.3 \
-	man3/__xnet_t_optmgmt_r.3 \
-	man3/__xnet_t_rcv_r.3 \
-	man3/__xnet_t_rcvconnect_r.3 \
-	man3/__xnet_t_rcvdis_r.3 \
-	man3/__xnet_t_rcvleafchange_r.3 \
-	man3/__xnet_t_rcvopt_r.3 \
-	man3/__xnet_t_rcvreldata_r.3 \
-	man3/__xnet_t_rcvudata_r.3 \
-	man3/__xnet_t_rcvuderr_r.3 \
-	man3/__xnet_t_rcvv_r.3 \
-	man3/__xnet_t_rcvvudata_r.3 \
-	man3/__xnet_t_removeleaf_r.3 \
-	man3/__xnet_t_snd_r.3 \
-	man3/__xnet_t_snddis_r.3 \
-	man3/__xnet_t_sndopt_r.3 \
-	man3/__xnet_t_sndrel_r.3 \
-	man3/__xnet_t_sndreldata_r.3 \
-	man3/__xnet_t_sndudata_r.3 \
-	man3/__xnet_t_sndv_r.3 \
-	man3/__xnet_t_sndvopt_r.3 \
-	man3/__xnet_t_sndvudata_r.3 \
-	man3/__xnet_t_sync_r.3 \
-	man3/__xnet_t_unbind_r.3 \
-	man3/__xnet_t_peek.3
+	man3/__xnet_t_unbind_r.3
 
 xnet_man_MANS	= \
 	man3/t_accept.3 \
@@ -246,6 +251,7 @@ xnet_man_MANS	= \
 	man3/t_rcvudata.3 \
 	man3/t_rcvuderr.3 \
 	man3/t_rcvv.3 \
+	man3/t_rcvvopt.3 \
 	man3/t_rcvvudata.3 \
 	man3/t_removeleaf.3 \
 	man3/t_snd.3 \
@@ -417,84 +423,86 @@ nodist_xnet_hidden_symbols = \
 	man3/_t_errno.3.man \
 	man3/_t_errstr.3.man \
 	man3/__xnet_t_accept.3.man \
+	man3/__xnet_t_accept_r.3.man \
 	man3/__xnet_t_addleaf.3.man \
+	man3/__xnet_t_addleaf_r.3.man \
 	man3/__xnet_t_alloc.3.man \
+	man3/__xnet_t_alloc_r.3.man \
 	man3/__xnet_t_bind.3.man \
+	man3/__xnet_t_bind_r.3.man \
 	man3/__xnet_t_close.3.man \
+	man3/__xnet_t_close_r.3.man \
 	man3/__xnet_t_connect.3.man \
+	man3/__xnet_t_connect_r.3.man \
 	man3/__xnet_t_errno.3.man \
 	man3/__xnet_t_error.3.man \
+	man3/__xnet_t_error_r.3.man \
 	man3/__xnet_t_free.3.man \
 	man3/__xnet_t_getinfo.3.man \
+	man3/__xnet_t_getinfo_r.3.man \
 	man3/__xnet_t_getprotaddr.3.man \
+	man3/__xnet_t_getprotaddr_r.3.man \
 	man3/__xnet_t_getstate.3.man \
+	man3/__xnet_t_getstate_r.3.man \
 	man3/__xnet_t_listen.3.man \
+	man3/__xnet_t_listen_r.3.man \
 	man3/__xnet_t_look.3.man \
+	man3/__xnet_t_look_r.3.man \
 	man3/__xnet_t_open.3.man \
+	man3/__xnet_t_open_r.3.man \
 	man3/__xnet_t_optmgmt.3.man \
+	man3/__xnet_t_optmgmt_r.3.man \
+	man3/__xnet_t_peek.3.man \
 	man3/__xnet_t_rcv.3.man \
 	man3/__xnet_t_rcvconnect.3.man \
+	man3/__xnet_t_rcvconnect_r.3.man \
 	man3/__xnet_t_rcvdis.3.man \
+	man3/__xnet_t_rcvdis_r.3.man \
 	man3/__xnet_t_rcvleafchange.3.man \
-	man3/__xnet_t_rcvrel.3.man \
-	man3/__xnet_t_rcvrel_r.3.man \
-	man3/__xnet_t_rcvreldata.3.man \
+	man3/__xnet_t_rcvleafchange_r.3.man \
 	man3/__xnet_t_rcvopt.3.man \
+	man3/__xnet_t_rcvopt_r.3.man \
+	man3/__xnet_t_rcv_r.3.man \
+	man3/__xnet_t_rcvrel.3.man \
+	man3/__xnet_t_rcvreldata.3.man \
+	man3/__xnet_t_rcvreldata_r.3.man \
+	man3/__xnet_t_rcvrel_r.3.man \
 	man3/__xnet_t_rcvudata.3.man \
+	man3/__xnet_t_rcvudata_r.3.man \
 	man3/__xnet_t_rcvuderr.3.man \
+	man3/__xnet_t_rcvuderr_r.3.man \
 	man3/__xnet_t_rcvv.3.man \
+	man3/__xnet_t_rcvvopt.3.man \
+	man3/__xnet_t_rcvvopt_r.3.man \
+	man3/__xnet_t_rcvv_r.3.man \
 	man3/__xnet_t_rcvvudata.3.man \
+	man3/__xnet_t_rcvvudata_r.3.man \
 	man3/__xnet_t_removeleaf.3.man \
+	man3/__xnet_t_removeleaf_r.3.man \
 	man3/__xnet_t_snd.3.man \
 	man3/__xnet_t_snddis.3.man \
+	man3/__xnet_t_snddis_r.3.man \
 	man3/__xnet_t_sndopt.3.man \
+	man3/__xnet_t_sndopt_r.3.man \
+	man3/__xnet_t_snd_r.3.man \
 	man3/__xnet_t_sndrel.3.man \
 	man3/__xnet_t_sndreldata.3.man \
+	man3/__xnet_t_sndreldata_r.3.man \
+	man3/__xnet_t_sndrel_r.3.man \
 	man3/__xnet_t_sndudata.3.man \
+	man3/__xnet_t_sndudata_r.3.man \
 	man3/__xnet_t_sndv.3.man \
 	man3/__xnet_t_sndvopt.3.man \
+	man3/__xnet_t_sndvopt_r.3.man \
+	man3/__xnet_t_sndv_r.3.man \
 	man3/__xnet_t_sndvudata.3.man \
+	man3/__xnet_t_sndvudata_r.3.man \
 	man3/__xnet_t_strerror.3.man \
 	man3/__xnet_t_sync.3.man \
+	man3/__xnet_t_sync_r.3.man \
 	man3/__xnet_t_sysconf.3.man \
 	man3/__xnet_t_unbind.3.man \
-	man3/__xnet_t_accept_r.3.man \
-	man3/__xnet_t_addleaf_r.3.man \
-	man3/__xnet_t_alloc_r.3.man \
-	man3/__xnet_t_bind_r.3.man \
-	man3/__xnet_t_close_r.3.man \
-	man3/__xnet_t_connect_r.3.man \
-	man3/__xnet_t_error_r.3.man \
-	man3/__xnet_t_getinfo_r.3.man \
-	man3/__xnet_t_getprotaddr_r.3.man \
-	man3/__xnet_t_getstate_r.3.man \
-	man3/__xnet_t_listen_r.3.man \
-	man3/__xnet_t_look_r.3.man \
-	man3/__xnet_t_open_r.3.man \
-	man3/__xnet_t_optmgmt_r.3.man \
-	man3/__xnet_t_rcv_r.3.man \
-	man3/__xnet_t_rcvconnect_r.3.man \
-	man3/__xnet_t_rcvdis_r.3.man \
-	man3/__xnet_t_rcvleafchange_r.3.man \
-	man3/__xnet_t_rcvopt_r.3.man \
-	man3/__xnet_t_rcvreldata_r.3.man \
-	man3/__xnet_t_rcvudata_r.3.man \
-	man3/__xnet_t_rcvuderr_r.3.man \
-	man3/__xnet_t_rcvv_r.3.man \
-	man3/__xnet_t_rcvvudata_r.3.man \
-	man3/__xnet_t_removeleaf_r.3.man \
-	man3/__xnet_t_snd_r.3.man \
-	man3/__xnet_t_snddis_r.3.man \
-	man3/__xnet_t_sndopt_r.3.man \
-	man3/__xnet_t_sndrel_r.3.man \
-	man3/__xnet_t_sndreldata_r.3.man \
-	man3/__xnet_t_sndudata_r.3.man \
-	man3/__xnet_t_sndv_r.3.man \
-	man3/__xnet_t_sndvopt_r.3.man \
-	man3/__xnet_t_sndvudata_r.3.man \
-	man3/__xnet_t_sync_r.3.man \
-	man3/__xnet_t_unbind_r.3.man \
-	man3/__xnet_t_peek.3.man
+	man3/__xnet_t_unbind_r.3.man
 
 xnet_dist_noinst_MANS	= \
 	man3/t_accept.3.man \
@@ -526,6 +534,7 @@ xnet_dist_noinst_MANS	= \
 	man3/t_rcvudata.3.man \
 	man3/t_rcvuderr.3.man \
 	man3/t_rcvv.3.man \
+	man3/t_rcvvopt.3.man \
 	man3/t_rcvvudata.3.man \
 	man3/t_removeleaf.3.man \
 	man3/t_snd.3.man \
