@@ -1,5 +1,8 @@
 2006-09-24  Brian Bidulock  <bidulock@openss7.org>
 
+	* doc/man/man3/t_rcvvopt.3.man: added missing manpage
+	* doc/man/Makefile.am: added missing manpage
+
 	* doc/man/Makefile.am: get rid of conflicting pages with strsock
 	* doc/man/man3/t_optmgmt.3.man: typo
 
